# axum-forum

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  justfile  service.nix
.github/workflows/: main.yml  pre-push.hook
assets/: base.scss  milligram.scss
src/: config.rs  error.rs  forum.rs  main.rs
src/forum/: controller.rs  forum_post.rs
src/forum/templates/: show_create.jinja  show_post.jinja
templates/: base.jinja  show_create.jinja  show_post.jinja  show_posts.jinja  show_reply.jinja
