[package]
name = "axum-forum"
version = "0.2.0"
edition = "2024"

[lints.clippy]
unwrap_used = "deny"

[dependencies]
axum = { version = "0.8.1" }
chrono = { version = "0.4.39", features = ["serde"] }
grass = { version = "0.13.4", features = ["macro"] }
minijinja = { version = "2.7.0" }
rusqlite = { version = "0.33.0", features = ["chrono", "bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = { version = "2.0.11" }
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
